vlib/v/checker/tests/direct_map_alias_init_err.vv
type WordSet = map[string]bool

fn main() {
	_ := WordSet{}
}
